tests/ui/keyword/extern/keyword-extern-as-identifier-use.stderr
error: expected identifier, found keyword `extern`
  --> $DIR/keyword-extern-as-identifier-use.rs:1:5
   |
LL | use extern::foo;
   |     ^^^^^^ expected identifier, found keyword
   |
help: escape `extern` to use it as an identifier
   |
LL | use r#extern::foo;
   |     ++

error[E0432]: unresolved import `r#extern`
  --> $DIR/keyword-extern-as-identifier-use.rs:1:5
   |
LL | use extern::foo;
   |     ^^^^^^ you might be missing crate `r#extern`
   |
   = help: consider adding `extern crate r#extern` to use the `r#extern` crate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
